--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,7 @@
 /SistemaOperacional/build/
 /TamahoTela/nbproject/private/
 /TamahoTela/build/
+/OlaMundoSwing/nbproject/private/
+/OlaMundoSwingg/nbproject/private/
+/PrimeiroSwing/PrimeiroSwing/nbproject/private/
+/PrimeiroSwing/PrimeiroSwing/build/
