--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,5 @@
 /OlaMundoSwingg/nbproject/private/
 /PrimeiroSwing/PrimeiroSwing/nbproject/private/
 /PrimeiroSwing/PrimeiroSwing/build/
+/PrimeiroSwing/Aula1Faculdade/nbproject/private/
+/PrimeiroSwing/Aula1Faculdade/build/
