Add, mais aula de JAVA

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,6 @@
 /PrimeiroSwing/PrimeiroSwing/build/
 /PrimeiroSwing/Aula1Faculdade/nbproject/private/
 /PrimeiroSwing/Aula1Faculdade/build/
+/PrimeiroSwing/AulaDoisFaculdade/nbproject/private/
+/PrimeiroSwing/Aula2Faculdade/nbproject/private/
+/PrimeiroSwing/Aula2Faculdade/build/
